# trip-planner

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  LICENSE  Makefile  README.md  package.json  pyproject.toml  setup-local.sh  setup-osrm.sh  setup-overpass.sh  trip_planner.html  trip_planner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-lint-test.yml  ci-semver.yml  conventional-commits.yml  release.yml
docs/: .last_doc_run  ARCHITECTURE.md  DATA_FLOWS.md  DEPENDENCIES.md  INDEX.md  ci-cd-pipeline.md  trip-planner-cli.md
tests/: test_trip_planner.py
