[project]
name = "trip-planner"
version = "1.0.0"
description = "Road trip planner CLI using OpenStreetMap"
requires-python = ">=3.8"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50

[tool.bandit]
exclude_dirs = ["__pycache__", ".git", "tests"]
skips = ["B101", "B110", "B113", "B404", "B603", "B607"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
